force-app/main/default/objects/BusinessUnitSpecificAttribute__c/BusinessUnitSpecificAttribute__c.object-meta.xml
<CustomObject>
    <description>The Business Unit Specific Attribute in Salesforce is a custom object designed to store unique and specialized information relevant to a specific business unit within Heijmans, allowing for tailored data management and analysis.</description>
    <label>Business Unit Specific Attribute</label>
    <nameField>
        <label>Business Unit Specific Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Unit Specific Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>