force-app/main/default/objects/BusinessUnitSpecificAttribute__c/fields/AccountNameForm__c.field-meta.xml
<CustomField>
    <fullName>AccountNameForm__c</fullName>
    <description>Formula created because we couldn&apos;t display the account name in the table. It displays the id field.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp;  AccountRef__r.Id , AccountRef__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>