force-app/main/default/objects/BusinessUnitSpecificAttribute__c/fields/AccountRef__c.field-meta.xml
<CustomField>
    <fullName>AccountRef__c</fullName>
    <description>The Account field serves as a reference to the specific account associated with the corresponding attributes.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Unit Specific Attributes</relationshipLabel>
    <relationshipName>BusinessUnitSpecificAttributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>