force-app/main/default/objects/BusinessUnitSpecificAttribute__c/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <description>To what Heijmans business unit is this BUSA record related?</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessUnits</valueSetName>
    </valueSet>
</CustomField>