force-app/main/default/objects/BusinessUnitSpecificAttribute__c/fields/BusinessUnitOwnerLoggedInForm__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitOwnerLoggedInForm__c</fullName>
    <description>This formula checks if the business unit owner is equal to the logged in user.
This is used in a flow to retrieve all the records that are &apos;owned&apos; by the logged in user.</description>
    <formula>IF (BusinessUnitOwnerRef__c =  $User.Id,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Owner = Logged In</label>
    <type>Checkbox</type>
</CustomField>