force-app/main/default/objects/BusinessUnitSpecificAttribute__c/fields/BusinessUnitOwnerManagerLoggedIn__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitOwnerManagerLoggedIn__c</fullName>
    <description>This formula checks if the business unit owner manager is equal to the logged in user.
This is used in a flow to retrieve all the records that are &apos;owned&apos; by the team of the manager.</description>
    <formula>IF ( BusinessUnitOwnerRef__r.Manager.Id  = $User.Id,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Owner Manager = Logged In</label>
    <type>Checkbox</type>
</CustomField>