force-app/main/default/objects/BusinessUnitSpecificAttribute__c/fields/BusinessUnitOwnerRef__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitOwnerRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Business Unit Owner refers to the individual who is responsible for overseeing and managing a specific business unit within the organization. This role involves making strategic decisions, setting objectives, and ensuring the unit&apos;s operations align with the overall company goals.</description>
    <label>Business Unit Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Unit_Specific_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>