force-app/main/default/objects/BusinessUnitSpecificAttribute__c/fields/FocusClientApproved__c.field-meta.xml
<CustomField>
    <fullName>FocusClientApproved__c</fullName>
    <description>In this case we are using a custom picklist to approve or reject a focus client instead of the standard approval proces because of simplicity and giving the manager a table option to approve or reject all focus clients at once.</description>
    <label>Focus Client Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>