force-app/main/default/objects/BusinessUnitSpecificAttribute__c/fields/FocusClientNextYearPick__c.field-meta.xml
<CustomField>
    <fullName>FocusClientNextYearPick__c</fullName>
    <description>Field created used in a flow to indicate if a client is a focus client for next year.</description>
    <label>Focus Client Next Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FocusClient</valueSetName>
    </valueSet>
</CustomField>