force-app/main/default/objects/BusinessUnitSpecificAttribute__c/fields/FocusClientPick__c.field-meta.xml
<CustomField>
    <fullName>FocusClientPick__c</fullName>
    <description>What kind of emphasis does the account associated with the particular business unit have?</description>
    <label>Focus Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FocusClient</valueSetName>
    </valueSet>
</CustomField>